# Ghost-Talk

./: CMakeLists.txt  README.md
src/: main.cpp
